--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -13,16 +13,12 @@
 			<div class="signup">
                 <form name="register">
                     <label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" class="name" name="name" placeholder="User name">
-					<input type="email" class="email" name="email" placeholder="Email">
-					<input type="password" class="password" name="password" placeholder="Password">
-					<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password">
-					<!-- <input type="text" class="name" name="name" placeholder="User name" required="">
+					<input type="text" class="name" name="name" placeholder="User name" required="">
 					<input type="email" class="email" name="email" placeholder="Email" required="">
 					<input type="password" class="password" name="password" placeholder="Password" required="">
-					<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password" required=""> -->
+					<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password" required="">
 					<input type="submit" class="button" value="Sign up"></input>
-                    <p align="center" id="error" style="color: rgb(255, 255, 0);"></p>
+                    <p align="center" id="error"></p>
                 </form>
 			</div>
             
@@ -31,9 +27,8 @@
                     <label for="chk" aria-hidden="true">Login</label>
 					<input type="email" name="email" placeholder="Email" required="">
 					<input type="password" name="password" placeholder="Password" required="">
-					<!-- <button>Login</button> -->
                     <input type="submit" class="button" value="Login"></input>
-                    <p align="center" id="error1" style="color: rgb(255, 255, 0);"></p>
+                    <p align="center" id="error1"></p>
 				</form>
 			</div>
 	</div>
