--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -18,7 +18,7 @@
 					<input type="password" class="password" name="password" placeholder="Password" required="">
 					<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password" required="">
 					<input type="submit" class="button" value="Sign up"></input>
-                    <p align="center" id="error"></p>
+                    <p id="error"></p>
                 </form>
 			</div>
             
@@ -28,7 +28,7 @@
 					<input type="email" name="email" placeholder="Email" required="">
 					<input type="password" name="password" placeholder="Password" required="">
                     <input type="submit" class="button" value="Login"></input>
-                    <p align="center" id="error1"></p>
+                    <p id="error1"></p>
 				</form>
 			</div>
 	</div>
