--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
+    <script src="assets/js/checkuser.js"></script>
     <script>
-        var LS = localStorage.getItem('name');
-        if (LS == "True") {
-            window.location.assign("admin")
-        } else{
-            alert("Error")
-            window.location.replace("login");
-        }
+      if (localStorage.getItem("role") === null || localStorage.getItem("role") != "admin") {
+        window.location.replace("login");
+      }
     </script>
-</head>
-<body>
-    Hello Admin 👋
-</body>
+  </head>
+  <body>
+    Hello Admin
+    <button onclick="logout()">Logout</button>
+  </body>
 </html>
