--- a/src/main/webapp/template/manager.html
+++ b/src/main/webapp/template/manager.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager Dashboard</title>
+    <script>
+      if (localStorage.getItem("role") === null || localStorage.getItem("role") != "manager") {
+        window.location.replace("login");
+      }
+    </script>
+   <script src="assets/js/checkuser.js"></script>
 </head>
 <body>
-    Hello Manager 👋
+    Hello Manager 
+    <button onclick="logout()">Logout</button>
 </body>
 </html>
