--- a/src/main/webapp/template/employee.html
+++ b/src/main/webapp/template/employee.html
@@ -7,9 +7,8 @@
     <title>Employee Dashboard</title>
    <script src="assets/js/checkuser.js"></script>
    <script>
-      if (localStorage.getItem("role") === null || localStorage.getItem("role") != "employee") {
+      if (localStorage.getItem("role") === null || localStorage.getItem("role") != "employee")
         window.location.replace("login");
-      }
     </script>
 </head>
 <body>
