user check form clear

--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Register/Login Form</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/login.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -11,7 +12,7 @@
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
-                <form name="register">
+                <form name="register" id="register">
                     <label for="chk" aria-hidden="true">Sign up</label>
 					<input type="text" class="name" name="name" placeholder="User name" required="">
 					<input type="email" class="email" name="email" placeholder="Email" required="">
