--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -11,27 +11,27 @@
 	<div class="main">
 		<input type="checkbox" id="chk" aria-hidden="true">
 
-			<div class="signup">
-                <form name="register" id="register">
-                    <label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" class="name" name="name" placeholder="User name" required="">
-					<input type="email" class="email" name="email" placeholder="Email" required="">
-					<input type="password" class="password" name="password" placeholder="Password" required="">
-					<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password" required="">
-					<input type="submit" class="button" value="Sign up"></input>
-                    <p id="error"></p>
-                </form>
-			</div>
-            
-			<div class="login">
-                <form>
-                    <label for="chk" aria-hidden="true">Login</label>
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="password" placeholder="Password" required="">
-                    <input type="submit" class="button" value="Login"></input>
-                    <p id="error1"></p>
-				</form>
-			</div>
+		
+		<div class="login">
+			<form name="login" id="login">
+				<label for="chk" aria-hidden="true">Login</label>
+				<input type="text" name="name" placeholder="Username" required>
+				<input type="password" name="password" placeholder="Password" required>
+				<button type="submit" id="login">Login</button>
+				<p id="error1"></p>
+			</form>
+		</div>
+		<div class="signup">
+			<form name="register" id="register">
+				<label for="chk" aria-hidden="true">Sign up</label>
+				<input type="text" class="name" name="name" placeholder="User name" required>
+				<input type="email" class="email" name="email" placeholder="Email" required>
+				<input type="password" class="password" name="password" placeholder="Password" required>
+				<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password" required>
+				<p id="error" style="color:red"></p>
+				<button type="submit" id="signup">Sign up</button>
+			</form>
+		</div>
 	</div>
 </body>
 <script src="assets/js/login.js"></script>
