--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -1,38 +1,70 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Register/Login Form</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/login.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+  <head>
+    <title>Register/Login Form</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/login.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
-<body>
-	<div class="main">
-		<input type="checkbox" id="chk" aria-hidden="true">
+  </head>
+  <body>
+    <div class="main">
+      <input type="checkbox" id="chk" aria-hidden="true" />
 
-		
-		<div class="login">
-			<form name="login" id="login">
-				<label for="chk" aria-hidden="true">Login</label>
-				<input type="text" name="name" placeholder="Username" required>
-				<input type="password" name="password" placeholder="Password" required>
-				<button type="submit" id="login">Login</button>
-				<p id="error1"></p>
-			</form>
-		</div>
-		<div class="signup">
-			<form name="register" id="register">
-				<label for="chk" aria-hidden="true">Sign up</label>
-				<input type="text" class="name" name="name" placeholder="User name" required>
-				<input type="email" class="email" name="email" placeholder="Email" required>
-				<input type="password" class="password" name="password" placeholder="Password" required>
-				<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password" required>
-				<p id="error" style="color:red"></p>
-				<button type="submit" id="signup">Sign up</button>
-			</form>
-		</div>
-	</div>
-</body>
-<script src="assets/js/login.js"></script>
+      <div class="login">
+        <form name="login" id="login">
+          <label for="chk" aria-hidden="true">Login</label>
+          <input type="text" name="name" placeholder="Username" required />
+          <input
+            type="password"
+			id="password"
+            name="password"
+            placeholder="Password"
+            required
+          />
+          <button type="submit" id="loginBtn">Login</button>
+          <p id="error1"></p>
+        </form>
+      </div>
+      <div class="signup">
+        <form name="register" id="register">
+          <label for="chk" aria-hidden="true">Sign up</label>
+          <input
+            type="text"
+            id="name1"
+            name="name"
+            placeholder="User name"
+            required
+          />
+          <input
+            type="email1"
+            id="email"
+            name="email"
+            placeholder="Email"
+            required
+          />
+          <input
+            type="password"
+            id="password1"
+            name="password"
+            placeholder="Password"
+            required
+          />
+          <input
+            type="password"
+            id="cpassword1"
+            name="cpassword"
+            placeholder="Confirm Password"
+            required
+          />
+          <p id="error" style="color: red"></p>
+          <button type="submit" id="registerBtn">Sign up</button>
+        </form>
+      </div>
+    </div>
+  </body>
+  <script src="assets/js/login.js"></script>
 </html>
