login logout done

--- a/src/main/webapp/assets/css/login.css
+++ b/src/main/webapp/assets/css/login.css
@@ -82,7 +82,8 @@ button:disabled{
 .signup{
 	height: 460px;
 	background: #eee;
-	border-radius: 60% / 10%;
+	border-top-left-radius: 60% 10%;
+    border-top-right-radius: 60% 10%;
 	transform: translateY(-180px);
 	transition: .8s ease-in-out;
 }
@@ -112,21 +113,12 @@ button:disabled{
   border-left:3px solid rgba(255,255,255,0.0);
   background-color:transparent !important;
   animation-name: rotateAnimation;
-  -webkit-animation-name: wk-rotateAnimation;
   animation-duration: 1s;
-  -webkit-animation-duration: 1s;
   animation-delay: 0.2s;
-  -webkit-animation-delay: 0.2s;
   animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
 }
 
 @keyframes rotateAnimation {
     0%   {transform: rotate(0deg);}
     100% {transform: rotate(360deg);}
 }
-@-webkit-keyframes wk-rotateAnimation {
-    0%   {-webkit-transform: rotate(0deg);}
-    100% {-webkit-transform: rotate(360deg);}
-}
-
