--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -1,96 +1,248 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Admin Dashboard</title>
-    <script src="assets/js/checkuser.js"></script>
-    <script>
-      if (
-        localStorage.getItem("role") === null ||
-        localStorage.getItem("role") != "admin"
-      )
-        window.location.replace("login");
-    </script>
+    <title>Users</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.3.1/jquery.twbsPagination.min.js"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"
+    ></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
+      rel="stylesheet"
+    />
+    <script src="assets/js/admin.js"></script>
+
+    <script src="assets/js/item-ajax.js"></script>
   </head>
   <body>
-    <div class="container">
+    <header>
+      <div class="logo">
+        <!-- <h2>SPM</h2> -->
+        <img src="assets/logo.svg" alt="logo" height=48px />
+      </div>
+      <nav>
+        <ul>
+          <li><a herf="#">Employee</a></li>
+          <li><a herf="projects">Projects</a></li>
+          <li><a herf="tasks">Tasks</a></li>
+        </ul>
+      </nav>
+      <button class="navBtn">Logout</button>
+    </header>
+
+    <div class="container" style="padding:10px">
       <div class="row">
-        <div class="col-sm-6">
-          <h2>Simple project management</h2>
+        <div class="col-lg-12 margin-tb">
+          <div class="pull-left">
+            <h2>USERS</h2>
+          </div>
+          <div class="pull-right" style="padding-top:18px">
+            <button
+              type="button"
+              class="btn btn-success"
+              data-toggle="modal"
+              data-target="#create-item"
+            >
+              Create Item
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>S.No</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th width="200px">Action</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+
+      <ul id="pagination" class="pagination-sm"></ul>
+
+      <!-- Create Item Modal -->
+      <div
+        class="modal fade"
+        id="create-item"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="myModalLabel"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span><i class="fa-solid fa-rectangle-xmark"></i></span>
+              </button>
+              <h4 class="modal-title" id="myModalLabel">Create Item</h4>
+            </div>
+
+            <div class="modal-body">
+              <form
+                data-toggle="validator"
+                action="add-user"
+                method="POST"
+              >
+                <div class="form-group">
+                  <label class="control-label" for="username">Username:</label>
+                  <input
+                    type="text"
+                    name="username"
+                    class="form-control"
+                    data-error="Please enter username."
+                    required
+                  />
+                  <div class="help-block with-errors"></div>
+                </div>
+
+                
+                <div class="form-group">
+                  <label class="control-label" for="email">Email:</label>
+                  <input
+                    type="text"
+                    name="username"
+                    class="form-control"
+                    data-error="Please enter email."
+                    required
+                  />
+                  <div class="help-block with-errors"></div>
+                </div>
+
+                
+                <div class="form-group">
+                  <label class="control-label" for="password">Password:</label>
+                  <input
+                    type="text"
+                    name="username"
+                    class="form-control"
+                    data-error="Please enter password."
+                    required
+                  />
+                  <div class="help-block with-errors"></div>
+                </div>
+
+                
+                <div class="form-group">
+                  <label class="control-label" for="role">Role:</label>
+                  <input
+                    type="text"
+                    name="username"
+                    class="form-control"
+                    data-error="Please enter Role."
+                    required
+                  />
+                  <div class="help-block with-errors"></div>
+                </div>
+
+                
+                <div class="form-group">
+                  <button type="submit" class="btn crud-submit btn-success">
+                    Submit
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Edit Item Modal -->
+      <div
+        class="modal fade"
+        id="edit-item"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="myModalLabel"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true"><i class="fa fa-window-close" aria-hidden="true"></i></span>
+              </button>
+              <h4 class="modal-title" id="myModalLabel">Edit Item</h4>
+            </div>
+
+            <div class="modal-body">
+              <form
+                data-toggle="validator"
+                name="add-user"
+                action="api/update.php"
+                method="put"
+              >
+                <input type="hidden" name="id" class="edit-id" />
+
+                <div class="form-group">
+                  <label class="control-label" for="title">Title:</label>
+                  <input
+                    type="text"
+                    name="title"
+                    class="form-control"
+                    data-error="Please enter title."
+                    required
+                  />
+                  <div class="help-block with-errors"></div>
+                </div>
+
+                <div class="form-group">
+                  <label class="control-label" for="title">Description:</label>
+                  <textarea
+                    name="description"
+                    class="form-control"
+                    data-error="Please enter description."
+                    required
+                  ></textarea>
+                  <div class="help-block with-errors"></div>
+                </div>
+
+                <div class="form-group">
+                  <button
+                    type="submit"
+                    class="btn btn-success crud-submit-edit"
+                  >
+                    Submit
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-    <div class="row">
-      <div class="col-sm-6">
-        <table
-          id="productTable"
-          class="table table-bordered table-condensed table-striped"
-        >
-          <thead>
-            <tr>
-              <th>Product Name</th>
-              <th>Introduction Date</th>
-              <th>URL</th>
-            </tr>
-          </thead>
-        </table>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6">
-        <button
-          type="button"
-          id="addButton"
-          class="btn btn-primary"
-          onclick="addClick();"
-        >
-          Add Product
-        </button>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="panel panel-primary">
-          <div class="panel-heading">Product Information</div>
-          <div class="panel-body"></div>
-          <div class="panel-footer"></div>
-        </div>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="productname">Product Name</label>
-      <input type="text" id="productname" class="form-control" />
-    </div>
-    <div class="form-group">
-      <label for="introdate">Introduction Date</label>
-      <input type="date" id="introdate" class="form-control" />
-    </div>
-    <div class="form-group">
-      <label for="url">URL</label>
-      <input type="url" id="url" class="form-control" />
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12">
-        <button
-          type="button"
-          id="updateButton"
-          class="btn btn-primary"
-          onclick="updateClick();"
-        >
-          Add
-        </button>
-      </div>
-    </div>
-
-    <button onclick="logout()">Logout</button>
   </body>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </html>
