--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -8,19 +8,17 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap"
       rel="stylesheet"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="main">
       <input type="checkbox" id="chk" aria-hidden="true" />
-
       <div class="login">
         <form name="login" id="login">
           <label for="chk" aria-hidden="true">Login</label>
           <input type="text" name="name" placeholder="Username" required />
           <input
             type="password"
-			id="password"
+            id="password"
             name="password"
             placeholder="Password"
             required
@@ -40,8 +38,8 @@
             required
           />
           <input
-            type="email1"
-            id="email"
+            type="email"
+            id="email1"
             name="email"
             placeholder="Email"
             required
@@ -66,5 +64,6 @@
       </div>
     </div>
   </body>
+  <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/login.js"></script>
 </html>
