--- a/src/main/webapp/template/employee.html
+++ b/src/main/webapp/template/employee.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Dashboard</title>
    <script src="assets/js/checkuser.js"></script>
-   <script>
+   <!-- <script>
       if (localStorage.getItem("role") === null || localStorage.getItem("role") != "employee")
         window.location.replace("login");
-    </script>
+    </script> -->
 </head>
 <body>
     Hello There 
