Redirect with encryption

--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/cookies.js"></script>
+    <script src="assets/js/checkuser.js"></script>
     <title>Users</title>
     <link
       rel="stylesheet"
@@ -37,7 +40,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
       rel="stylesheet"
     />
-    <script src="assets/js/checkuser.js"></script>
     <script src="assets/js/admin.js"></script>
 
     <script src="assets/js/item-ajax.js"></script>
