--- a/src/main/webapp/template/index.html
+++ b/src/main/webapp/template/index.html
@@ -5,6 +5,8 @@
     <title>Test Database</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+	<script src="assets/js/cookies.js"></script>
+	<script src="assets/js/checkuser.js"></script>
 	<script src="assets/js/user.js"></script>
     <script type="text/javascript">
 
