--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -66,4 +66,5 @@
   </body>
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/login.js"></script>
+  <script src="assets/js/cookies.js"></script>
 </html>
