--- a/src/main/webapp/template/manager.html
+++ b/src/main/webapp/template/manager.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/cookies.js"></script>
+    <script src="assets/js/checkuser.js"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manager Dashboard</title>
-    <script>
-      if (localStorage.getItem("role") === null || localStorage.getItem("role") != "manager") {
-        window.location.replace("login");
-      }
-    </script>
-   <script src="assets/js/checkuser.js"></script>
-</head>
-<body>
-    Hello Manager 
+  </head>
+  <body>
+    Hello Manager
     <button onclick="logout()">Logout</button>
-</body>
+  </body>
 </html>
