--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -1,276 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/cookies.js"></script>
     <script src="assets/js/checkuser.js"></script>
-    <title>Users</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.3.1/jquery.twbsPagination.min.js"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
-    <script
-      type="text/javascript"
-      src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"
-    ></script>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
-      rel="stylesheet"
-    />
-    <script src="assets/js/admin.js"></script>
-
-    <script src="assets/js/item-ajax.js"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <!-- bootstrap5 dataTables css cdn -->
+    <link rel="stylesheet" href="assets/css/dataTables.bootstrap5.min.css" />
+    <!-- <link rel="stylesheet" href="assets/css/style.css" /> -->
   </head>
-  <body>
-    <header>
-      <div class="logo">
-        <!-- <h2>SPM</h2> -->
-        <img src="assets/logo.svg" alt="logo" height="48px" />
-      </div>
-      <nav>
-        <ul>
-          <li><a herf="#">Employee</a></li>
-          <li><a herf="projects">Projects</a></li>
-          <li><a herf="tasks">Tasks</a></li>
-        </ul>
-      </nav>
-      <button class="navBtn" onclick="logout()">Logout</button>
-    </header>
 
-    <div class="container" style="padding: 10px">
-      <div class="row">
-        <div class="col-lg-12 margin-tb">
-          <div class="pull-left">
-            <h2>USERS</h2>
-          </div>
-          <div class="pull-right" style="padding-top: 18px">
-            <button
-              type="button"
-              class="btn btn-success"
-              data-toggle="modal"
-              data-target="#create-item"
-            >
-              Create Item
-            </button>
-          </div>
+  <body>
+    <!-- example 5 left and center only with empty space right -->
+    <nav
+      class="navbar navbar-expand-sm navbar-dark bg-primary flex-sm-nowrap flex-wrap"
+    >
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar5"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <span class="navbar-brand flex-grow-1">Admin</span>
+        <div
+          class="navbar-collapse collapse flex-grow-1 justify-content-center"
+          id="navbar5"
+        >
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#users">Users</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#tasks">Tasks</a>
+            </li>
+          </ul>
+          <div class="flex-grow-1"></div>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <button class="navBtn" onclick="logout()">Logout</button>
+            </li>
+          </ul>
         </div>
       </div>
-
-      <table class="table table-bordered">
+    </nav>
+    <div class="container mt-4" id="users">
+      <h3>Users</h3>
+      <br />
+      <table id="datatable" class="table">
         <thead>
           <tr>
-            <th>S.No</th>
-            <th>Username</th>
+            <th>ID</th>
+            <th>Name</th>
             <th>Email</th>
             <th>Role</th>
-            <th width="200px">Action</th>
+            <th>Joined</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Jhon doe</td>
+            <td>Jhondoe@gmail.com</td>
+            <td>10/10/22</td>
+          </tr>
+        </tbody>
       </table>
-      <h1 id="message">Message</h1>
-      <ul id="pagination" class="pagination-sm"></ul>
-
-      <!-- Create Item Modal -->
-      <div
-        class="modal fade"
-        id="create-item"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="myModalLabel"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span><i class="fa-solid fa-rectangle-xmark"></i></span>
-              </button>
-              <h4 class="modal-title" id="myModalLabel">Create Item</h4>
-            </div>
-
-            <div class="modal-body">
-              <form data-toggle="validator" name="add_user" method="POST">
-                <div class="form-group">
-                  <label class="control-label" for="username">Username:</label>
-                  <input
-                    type="text"
-                    name="name"
-                    class="form-control"
-                    data-error="Please enter username."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="email">Email:</label>
-                  <input
-                    type="email"
-                    name="email"
-                    class="form-control"
-                    data-error="Please enter valid email."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="password">Password:</label>
-                  <input
-                    type="text"
-                    name="password"
-                    class="form-control"
-                    data-error="Please enter password."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="role">Role:</label>
-                  <input
-                    type="text"
-                    name="role"
-                    class="form-control"
-                    data-error="Please enter Role."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <button
-                    type="submit"
-                    id="createBtn"
-                    class="btn crud-submit btn-success"
-                  >
-                    Submit
-                  </button>
-                  <p style="color: red; padding: 10px" id="add-error"></p>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Edit Item Modal -->
-      <div
-        class="modal fade"
-        id="edit-item"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="myModalLabel"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true"
-                  ><i class="fa fa-window-close" aria-hidden="true"></i
-                ></span>
-              </button>
-              <h4 class="modal-title" id="myModalLabel">Edit Item</h4>
-            </div>
-
-            <div class="modal-body">
-              <form data-toggle="validator" name="update-user" method="put">
-                <input type="hidden" name="id" class="edit-id" />
-
-                <div class="form-group">
-                  <label class="control-label" for="username">Username:</label>
-                  <input
-                    type="text"
-                    name="name"
-                    class="form-control"
-                    data-error="Please enter username."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="email">Email:</label>
-                  <input
-                    type="email"
-                    name="email"
-                    class="form-control"
-                    data-error="Please enter valid email."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="password">Password:</label>
-                  <input
-                    type="text"
-                    name="password"
-                    class="form-control"
-                    data-error="Please enter password."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <label class="control-label" for="role">Role:</label>
-                  <input
-                    type="text"
-                    name="role"
-                    class="form-control"
-                    data-error="Please enter Role."
-                    required
-                  />
-                  <div class="help-block with-errors"></div>
-                </div>
-
-                <div class="form-group">
-                  <button
-                    type="submit"
-                    class="btn btn-success crud-submit-edit"
-                  >
-                    Submit
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
+    <!-- bootstrap5 dataTables js cdn -->
+    <script src="assets/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="assets/js/jquery.dataTables.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#datatable").DataTable();
+      });
+    </script>
   </body>
 </html>
