JS cookies to java session

--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/cookies.js"></script>
+    <script src="assets/js/checkuser.js"></script>
     <title>Register/Login Form</title>
     <link rel="stylesheet" type="text/css" href="assets/css/login.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
