Add user with validation

--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -19,9 +19,8 @@
       referrerpolicy="no-referrer"
     />
 
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dataTables.min.js"></script>
-    <script src="assets/js/dataTables.bootstrap.min.js"></script>
+    <!-- <script src="assets/js/jquery.dataTables.min.js"></script>
+    <script src="assets/js/dataTables.bootstrap.min.js"></script> -->
   </head>
 
   <body>
@@ -195,102 +194,18 @@
       </div>
     </div>
     <!-- Modal end -->
-    <!-- Create User Modal -->
-    <div
-      class="modal fade"
-      id="create-item"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="myModalLabel"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span><i class="fa-solid fa-rectangle-xmark"></i></span>
-            </button>
-            <h4 class="modal-title" id="myModalLabel">Create Item</h4>
-          </div>
 
-          <div class="modal-body">
-            <form data-toggle="validator" name="add_user" method="POST">
-              <div class="form-group">
-                <label class="control-label" for="username">Username:</label>
-                <input
-                  type="text"
-                  name="name"
-                  class="form-control"
-                  data-error="Please enter username."
-                  required
-                />
-                <div class="help-block with-errors"></div>
-              </div>
-
-              <div class="form-group">
-                <label class="control-label" for="email">Email:</label>
-                <input
-                  type="email"
-                  name="email"
-                  class="form-control"
-                  data-error="Please enter valid email."
-                  required
-                />
-                <div class="help-block with-errors"></div>
-              </div>
-
-              <div class="form-group">
-                <label class="control-label" for="password">Password:</label>
-                <input
-                  type="text"
-                  name="password"
-                  class="form-control"
-                  data-error="Please enter password."
-                  required
-                />
-                <div class="help-block with-errors"></div>
-              </div>
-
-              <div class="form-group">
-                <label class="control-label" for="role">Role:</label>
-                <input
-                  type="text"
-                  name="role"
-                  class="form-control"
-                  data-error="Please enter Role."
-                  required
-                />
-                <div class="help-block with-errors"></div>
-              </div>
-
-              <div class="form-group">
-                <button
-                  type="submit"
-                  id="createBtn"
-                  class="btn crud-submit btn-success"
-                >
-                  Submit
-                </button>
-                <p style="color: red; padding: 10px" id="add-error"></p>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/toast.js"></script>
     <script src="assets/js/validator.js"></script>
     <script src="assets/js/admin.js"></script>
     <!-- bootstrap5 dataTables js cdn -->
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="assets/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
-    <script>
+    <script> 
       $(document).ready(function () {
         $("#example").DataTable({ searching: false });
       });
