--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
     <!-- <script src="assets/js/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap.min.js"></script> -->
   </head>
@@ -56,7 +56,7 @@
           <div class="flex-grow-1"></div>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <button class="navBtn" onclick="logout()">Logout</button>
+              <button class="navBtn" onclick="logout()"><i class="fa fa-sign-out"></i> Logout</button>
             </li>
           </ul>
         </div>
@@ -73,10 +73,9 @@
           <i class="fa fa-add"></i> Add User
         </button>
       </div>
-      <br /><br />
-      <br /><br />
+      <br /><br /><br />
       <table
-        id="example"
+        id="usersTable"
         class="table table-striped table-bordered"
         cellspacing="0"
         width="100%"
@@ -92,8 +91,8 @@
           </tr>
         </thead>
 
-        <tbody>
-          <tr>
+        <tbody id="tbody">
+          <!-- <tr>
             <td>1</td>
             <td>admin</td>
             <td>admin@admin.com</td>
@@ -105,7 +104,7 @@
               &nbsp;
               <span><i class="fas fa-trash"></i></span>
             </td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </div>
@@ -202,13 +201,7 @@
     <script src="assets/js/toast.js"></script>
     <script src="assets/js/validator.js"></script>
     <script src="assets/js/admin.js"></script>
-    <!-- bootstrap5 dataTables js cdn -->
     <script src="assets/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
-    <script> 
-      $(document).ready(function () {
-        $("#example").DataTable({ searching: false });
-      });
-    </script>
+    <script src="assets/js/dataTables.bootstrap5.min.js"></script>
   </body>
 </html>
