--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -133,7 +133,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <form name="add-user" id="user">
+            <form name="add-user" id="add-user">
               <div class="form-group">
                 <label for="name">Username</label>
                 <input
