--- a/src/main/webapp/template/index.html
+++ b/src/main/webapp/template/index.html
@@ -5,11 +5,10 @@
     <script src="assets/js/user.js"></script>
     <meta charset="ISO-8859-1" />
     <title>Test Database</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery/jquery.min.js"></script>
 
     <script type="text/javascript">
-
-    //   if (parts.length === 2) return parts.pop().split(";").shift();
+      //   if (parts.length === 2) return parts.pop().split(";").shift();
       function find() {
         var user;
         $.ajax({
