--- a/src/main/webapp/template/login.html
+++ b/src/main/webapp/template/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/checkuser.js"></script>
     <title>Register/Login Form</title>
     <link rel="stylesheet" type="text/css" href="assets/css/login.css" />
@@ -17,7 +17,13 @@
       <div class="login">
         <form name="login" id="login">
           <label for="chk" aria-hidden="true">Login</label>
-          <input type="text" name="name" id="lname" placeholder="Username" required />
+          <input
+            type="text"
+            name="name"
+            id="lname"
+            placeholder="Username"
+            required
+          />
           <input
             type="password"
             id="lpassword"
@@ -68,6 +74,6 @@
     </div>
   </body>
   <script src="assets/js/validator.js"></script>
-  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/login.js"></script>
 </html>
