--- a/src/main/webapp/template/manager.html
+++ b/src/main/webapp/template/manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/checkuser.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
