--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -18,8 +18,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" />
-    <!-- <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
+    <!-- <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" /> -->
+    <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
   </head>
 
@@ -44,13 +44,13 @@
         >
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link" href="admin">Users</a>
+              <a class="nav-link" href="#users">Users</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="admin_projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="admin_tasks">Tasks</a>
+              <a class="nav-link" href="#tasks">Tasks</a>
             </li>
           </ul>
           <div class="flex-grow-1"></div>
@@ -62,7 +62,7 @@
         </div>
       </div>
     </nav>
-    <div class="container mt-4" id="users">
+    <div class="container mt-4" id="projects">
       <div class="float-left"><h3>Projects</h3></div>
       <div class="float-right">
         <button
@@ -70,19 +70,19 @@
           data-toggle="modal"
           data-target="#formModal"
         >
-          <i class="fa fa-add"></i>  Create Project
+          <i class="fa fa-add"></i> Create Project
         </button>
       </div>
       <br /><br /><br />
       <table
-        id="usersTable"
+        id="projectsTable"
         class="table table-striped table-bordered"
         cellspacing="0"
         width="100%"
       >
         <thead>
           <tr>
-            <th>uid</th>
+            <th>pid</th>
             <th>SNo</th>
             <th>Name</th>
             <th>Description</th>
@@ -91,20 +91,7 @@
           </tr>
         </thead>
 
-        <tbody id="tbody">
-          <!-- <tr>
-            <td>1</td>
-            <td>admin</td>
-            <td>admin@admin.com</td>
-            <td>admin</td>
-            <td>2022/04/25</td>
-            <td>
-              &nbsp;&nbsp;
-              <span><i class="fas fa-edit"></i></span>
-              &nbsp;
-              <span><i class="fas fa-trash"></i></span>
-            </td>
-          </tr> -->
+        <tbody>
         </tbody>
       </table>
     </div>
@@ -121,7 +108,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="formModalLabel">Add User</h5>
+            <h5 class="modal-title" id="formModalLabel">Create Project</h5>
             <button
               type="button"
               class="close"
@@ -132,50 +119,40 @@
             </button>
           </div>
           <div class="modal-body">
-            <form name="add-user" id="add-user">
+            <form name="create-project" id="create-project">
               <div class="form-group">
-                <label for="name">Username</label>
+                <label for="name">Name</label>
                 <input
                   type="text"
                   class="form-control"
                   id="name"
                   name="name"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter username"
+                  aria-describedby="nameHelp"
+                  placeholder="Enter Project Name"
                   required
                 />
               </div>
               <div class="form-group">
-                <label for="email">Email address</label>
-                <input
-                  type="email"
+                <label for="desc">Description</label>
+                <textarea
                   class="form-control"
-                  id="email"
-                  name="email"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter email"
+                  id="desc"
+                  name="desc"
+                  aria-describedby="descHelp"
+                  rows="7"
+                  placeholder="Enter Description atleast 20 characters"
                   required
-                />
+                ></textarea>
               </div>
               <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Owner Name</label>
                 <input
-                  type="password"
+                  type="text"
                   class="form-control"
-                  id="password"
-                  name="password"
-                  placeholder="Password"
-                  required
+                  id="owner"
+                  name="owner"
+                  placeholder="Owner Name (optional)"
                 />
-              </div>
-              <div class="form-group">
-                <label for="role">Role</label>
-                <br />
-                <select class="form-control" id="role" name="role" aria-label=".form-select-lg example">
-                  <option value="employee" selected>Employee</option>
-                  <option value="manager">Manager</option>
-                  <option value="admin">Admin</option>
-                </select>
               </div>
             </div>
             <div class="modal-footer">
@@ -205,7 +182,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="formModalLabel">Edit User</h5>
+            <h5 class="modal-title" id="formModalLabel">Edit Project</h5>
             <button
               type="button"
               class="close"
@@ -307,8 +284,7 @@
     <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="assets/js/toast.js"></script>
-    <script src="assets/js/validator.js"></script>
-    <script src="assets/js/admin.js"></script>
+    <script src="assets/js/projects.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
     <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
